# stm32rs-template

./: .gitignore  Cargo.toml  Embed.toml
.cargo/: config.toml
examples/: blink.rs  template.rs
src/: main.rs
